# wyzazanie

./: .gitignore  CMakeLists.txt  algorithm.cpp  algorithm.h  functions.cpp  functions.h  main.cpp
